[macOS] Send playEffect() twice to Gamepad.actuator and it cannot stop with reset() https://bugs.webkit.org/show_bug.cgi?id=279094 rdar://126589062

Reviewed by NOBODY (OOPS!).

When sending playEffect() to Gamepad.actuator more than once, the reset() cannot stop the gamepad from vibrating.

The root cause of the issue is requesting a completionHandler invocation to wrong effect object.
Say two sequential playEffect requests is coming.

1. The effect object of request 1 is stored in m_currentDualRumbleEffect and referenced by currentEffect in playEffect() method.
2. In second playEffect(), currentEffect is stopped  before start playing second one. This is in main thread.
3. Notification for stopPlaying is called for first request {*) in CoreHaptics thread.
4. currentEffect is replaced with new effect.
5. Notification arrived in main thread and try to invoke completionHandler targeting to second request. This is wrong because the notification is for first request.

Move the notification handling in GameControllerHapticEffect to avoid this confusion.

Also CoreHaptics's notifyWhenPlayersFinished seems unstable. It returns immediately after setting the completionHandler.

Replacing the implementation using RunLoop::Timer. Then error rate went down from 16/100 to 0/100.

* Source/WebCore/platform/gamepad/cocoa/GameControllerHapticEffect.h:
* Source/WebCore/platform/gamepad/cocoa/GameControllerHapticEffect.mm:
(WebCore::GameControllerHapticEffect::create):
(WebCore::GameControllerHapticEffect::GameControllerHapticEffect):
(WebCore::GameControllerHapticEffect::start):
* Source/WebCore/platform/gamepad/cocoa/GameControllerHapticEngines.h:
* Source/WebCore/platform/gamepad/cocoa/GameControllerHapticEngines.mm:
(WebCore::GameControllerHapticEngines::ensureStarted):