Source/WebCore/platform/gamepad/cocoa/GameControllerGamepad.h
@@ -66,7 +66,7 @@ private:
     Vector<SharedGamepadValue> m_axisValues;
     Vector<SharedGamepadValue> m_buttonValues;
 #if HAVE(WIDE_GAMECONTROLLER_SUPPORT)
-    std::unique_ptr<GameControllerHapticEngines> m_hapticEngines;
+    RefPtr<GameControllerHapticEngines> m_hapticEngines;
 #endif
 };
 
