Source/WebCore/platform/gamepad/cocoa/GameControllerHapticEffect.h
@@ -29,17 +29,11 @@
 
 #import <wtf/CompletionHandler.h>
 #import <wtf/RetainPtr.h>
+#import <wtf/ThreadSafeRefCounted.h>
 #import <wtf/TZoneMalloc.h>
 #import <wtf/WeakPtr.h>
 
-namespace WebCore {
-class GameControllerHapticEffect;
-}
-
-namespace WTF {
-template<typename T> struct IsDeprecatedWeakRefSmartPointerException;
-template<> struct IsDeprecatedWeakRefSmartPointerException<WebCore::GameControllerHapticEffect> : std::true_type { };
-}
+OBJC_CLASS CHHapticEngine;
 
 namespace WebCore {
 
@@ -47,21 +41,23 @@ class GameControllerHapticEngines;
 struct GamepadEffectParameters;
 enum class GamepadHapticEffectType : uint8_t;
 
-class GameControllerHapticEffect : public CanMakeWeakPtr<GameControllerHapticEffect> {
+class GameControllerHapticEffect : public CanMakeWeakPtr<GameControllerHapticEffect>, public ThreadSafeRefCounted<GameControllerHapticEffect> {
     WTF_MAKE_TZONE_ALLOCATED(GameControllerHapticEffect);
 public:
-    static std::unique_ptr<GameControllerHapticEffect> create(GameControllerHapticEngines&, GamepadHapticEffectType, const GamepadEffectParameters&);
-    ~GameControllerHapticEffect();
+    static RefPtr<GameControllerHapticEffect> create(GameControllerHapticEngines&, GamepadHapticEffectType, const GamepadEffectParameters&);
+    virtual ~GameControllerHapticEffect();
 
     void start(CompletionHandler<void(bool)>&&);
     void stop();
 
+private:
+    GameControllerHapticEffect(RetainPtr<CHHapticEngine>&& leftEngine, RetainPtr<CHHapticEngine>&&, RetainPtr<id>&& leftPlayer, RetainPtr<id>&& rightPlayer);
+
     void leftEffectFinishedPlaying();
     void rightEffectFinishedPlaying();
 
-private:
-    GameControllerHapticEffect(RetainPtr<id>&& leftPlayer, RetainPtr<id>&& rightPlayer);
-
+    RetainPtr<CHHapticEngine> m_leftEngine;
+    RetainPtr<CHHapticEngine> m_rightEngine;
     RetainPtr<id> m_leftPlayer;
     RetainPtr<id> m_rightPlayer;
     CompletionHandler<void(bool)> m_completionHandler;
